fix(nav-drawer): :bug: fix overflow on mobile

--- a/packages/core/src/components/navigation/go-nav-drawer/go-nav-drawer.scss
+++ b/packages/core/src/components/navigation/go-nav-drawer/go-nav-drawer.scss
@@ -98,6 +98,7 @@
       height: 100%;
       padding: 1rem 0;
       flex: 1;
+      overflow: auto;
     }
 
     .nav-menu {
@@ -111,7 +112,6 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    height: 100%;
   }
 
   .nav-item-inner {
